--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,14 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <img id="a" class="rounded" src="assets/iconeapp.png"><br>
+  <div class="text-center"  style="position: relative; top: 1%; height: 10px;">
+    <p id="b">Assessoria e Consultoria Administrativa</p>
+    <p id="c">e jurídica em Transito & CNH</p> 
   </div>
+
+  <div class="text-center" (click)="a()" style="position: relative; top: 30%; height: 10px;">
+    <p id="d">Clique para</p>
+    <p id="e">Iniciar sua inscrição</p> 
+  </div>
+  
 </ion-content>
