--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,45 @@
-#container {
-  text-align: center;
+ion-content{
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  --ion-background-color:#111D12;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+#a{
+  position: relative;
+  margin-top: 20%;
+  width: 80%;
+  left: 10%;
+  height: 150px;
 }
 
-#container p {
+#b{
+ color: white;
+ font-size: 16px;
+ font-weight: bold;
+ position: relative;
+margin-bottom: -1px;
+ 
+}
+
+#c{
+  color: white;
   font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+  font-weight: bold;
+  position: relative;
+  
 }
 
-#container a {
-  text-decoration: none;
+#d{
+  color: hsl(57, 100%, 89%);
+  font-size: 20px;
+  font-weight: 300;
+  position: relative;
+ margin-bottom: -1px;
+  
+}
+
+#e{
+  color: #fffcc7;
+  font-size: 20px;
+  font-weight: 300;
+  position: relative;
 }
